# Urban-Retail-Strategy-Copilot-for-IEOR-4576

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: data_engineer.py  lead_strategist.py  market_researcher.py
data/: zoning_knowledge.py
data/shapefiles/: zcta.geojson
data/vectorstore/: embeddings.npy
graph/: state.py  workflow.py
tools/: llm_client.py  nyc_data_tools.py  python_executor.py  rag_tools.py
